# contract_service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.docker/contract_grpc/: Dockerfile
.docker/elasticsearch/config/: elasticsearch.yml
.docker/otel_collector/: otel_collector_config.yaml
_docs/: arquitetura.md  changelog.md  entidades.md  eventos.md  grpc.md  politicas-de-desenvolvimento.md  preparacao-ambiente-local.md  requisitos-nao-funcionais.md  requisitos.md  versionamento.md
_gprc/: create_customer.sh
_req/grpcurl/customer/: create_customer.sh
migrations/: 20240702235534_create_customers_table.down.sql  20240702235534_create_customers_table.up.sql
proto/: customer.proto
src/: container.rs  db.rs  env.rs  error.rs  main.rs
src/bootstrap/: customer_container.rs  mod.rs
src/errors/: env.rs  kafka.rs  mod.rs  postgres.rs
src/gprc/service/: customer_grpc_service.rs
src/grpc/: mod.rs
src/grpc/controller/: customer_controller.rs  mod.rs
src/grpc/mapper/: customer_mapper.rs
src/grpc/pb/: customer_pb.rs  mod.rs
src/internal/: mod.rs
src/internal/adapters/: customer_repository_postgres.rs  mod.rs
src/internal/application/: customer_service.rs  mod.rs
src/internal/domain/event/: mod.rs
src/internal/domain/event/customer/: customer_created_event.rs
src/internal/domain/model/: customer.rs
src/internal/domain/use_case/: create_customer.rs  mod.rs
src/kafka/: mod.rs  producer.rs
src/proto/: customer.proto  descriptor.pb
